--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
-<!DOCTYPE html>
-<html lang="pl">
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<title>Document</title>
-	</head>
-	<body>
-		<div class="content">
-		  <div id="nav">
-		    <ul>
-		      <li class="menuItem">Homepage</li>
-		      <li class="menuItem">About me</li>
-		      <li>Contact</li>
-		    </ul>
-		    <button class="button">Hello!</button>
-		    <button class="button">Witaj!</button>
-		    <button class="button">Welcome</button>
-		  </div>
-		  <div id="footer">
-		    <ul>
-		      <li class="menuItem">SocialLink</li>
-		    </ul>
-		  </div>
-		</div>
-	<script type="text/javascript" src="js/script.js"></script>
-	</body>
+<!-- index.html -->
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Page title</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <h1>Welcome to my page</h1>
+    <button class="button">Witaj!</button>
+    <button class="button">catalog/</button>
+    <button class="button">save_button/</button>
+    <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
